--- a/templates/login.html
+++ b/templates/login.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h2>Login </h2>
-    <form action="/login" method="POST">
-        <label for="username">User:</label>
-        <input type="text" name="username" required>
-        <br>
-        <label for="password">password:</label>
-        <input type="password" name="password" required>
-        <br>
-        <button type="submit">submit</button>
-    </form>
-    <p>You dont have an account ? <a href="/register">Register</a></p>
+    <div class="container">
+        <h2>Login</h2>
+        <form action="/login" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" name="password" required>
+
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
+    </div>
 </body>
 </html>
