--- a/templates/register.html
+++ b/templates/register.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h2>User register</h2>
-    <form action="/register" method="POST">
-        <label for="username">User:</label>
-        <input type="text" name="username" required>
-        <br>
-        <label for="password">Passsword:</label>
-        <input type="password" name="password" required>
-        <br>
-        <button type="submit">Register</button>
-    </form>
-    <p>¿Do you have an account? <a href="/login">Login</a></p>
+    <div class="container">
+        <h2>Login</h2>
+        <form action="/login" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" name="password" required>
+
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account yet? <a href="{{ url_for('register') }}">Register here</a></p>
+    </div>
 </body>
 </html>
